--- a/infotainmentify-fe/package.json
+++ b/infotainmentify-fe/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.548.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
