--- a/infotainmentify-fe/package.json
+++ b/infotainmentify-fe/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^9.0.6",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-syntax-highlighter": "^16.1.0"
+    "react-syntax-highlighter": "^16.1.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
